# football_notifier_app

./: .flake8  .gitignore  Dockerfile  README.md  commands_notes  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: .flake8  config.env  settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_notifier_models  test_user_models.py
app/notifier/: conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
app/notifier/migrations/: 0001_initial.py  0002_notification_notifsubscription.py  0003_fixture_score.py  0004_auto_20220430_1750.py  0005_auto_20220501_1101.py  0006_auto_20220501_1129.py  0007_auto_20220501_1230.py  0008_tournament_country.py  0009_auto_20220502_1943.py  0010_auto_20220503_1123.py  0011_auto_20220503_1207.py  0012_remove_fixture_fixture_id.py  0013_auto_20220503_1455.py  0014_auto_20220512_2054.py  0015_auto_20220512_2101.py  0016_auto_20220512_2116.py  0017_auto_20220512_2117.py  0017_auto_20220513_0720.py  0018_auto_20220514_1742.py  0019_auto_20220514_1800.py  0020_auto_20220514_1801.py  0021_auto_20220513_0720.py  0022_auto_20220514_1811.py  0023_teamstanding_season.py
app/notifier/src/: api_request.py  emojis.py  entities.py  fixtures_manager.py  populate_standings.py  team_fixtures_manager.py
app/notifier/src/api_clients/: base_client.py  (+4 more)
app/notifier/tests/: conftest.py  test_notifier_api.py  test_notifier_models.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
(+13 files in other folders)
