[tool.poetry]
name = "football_notifier"
version = "0.1.0"
description = ""
authors = ["Matias Cardenas"]

[tool.poetry.dependencies]
python = "3.7"
Django = ">=2.1.0,<2.2.0"
djangorestframework = ">=3.8.2,<3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
